Fix image clipping

--- a/src/index.scss
+++ b/src/index.scss
@@ -157,7 +157,7 @@ button:disabled {
 }
 
 .painting-main {
-  max-height: calc(100vh - 330px);
+  max-height: calc(100vh - 360px);
 }
 
 @media (min-width: 768px ) {
